<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VokabelApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_train">Vokabel trainieren</string>
    <string name="btn_edit">Vokabeln bearbeiten</string>
    <string name="btn_add_vocable">Vokabeln hinzufuegen</string>
    <string name="btn_delete_vocable">Vokabeln löschen</string>
    <string name="btn_showAll">Alle Vokabeln anzeigen</string>

    <string name="btn_box1">Box 1</string>
    <string name="btn_box2">Box 2</string>
    <string name="btn_box3">Box 3</string>
    <string name="hello" />

    <string name="txt_word">Vocabel eingeben</string>
    <string name="txt_translation">Übersetzung eingeben</string>
    <string name="txt_boxNr">1</string>

    <string name="btn_save">Speichern</string>
    <string name="btn_cancel">Abbrechen</string>

    <string name="btn_add">Vokabel hinzufügen</string>
    <string name="btn_delete">Vokabel löschen</string>

    <string name="btn_mainMenu">Hauptmenue</string>
    <string name="btn_start">Start Training</string>

    <string name="txt_selectItem">Vokabel auswählen/anklicken</string>

    <string name="btn_showTranslation">Übersetzung anzeigen</string>
    <string name="btn_trainEnd">Training beenden</string>
    <string name="btn_next">Nächste Vokabel anzeigen</string>

    <string name="btn_correct">Richtig</string>
    <string name="btn_not_correct">Falsch</string>

    <string name="txt_empty">Die Box ist leer. Alle Vokabeln sind abgearbeitet worden</string>

    <string name="txt_selectBox">Box auswählen</string>
    <string name="txt_delete">Vokabel wurde gelöscht</string>


</resources>
