<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_train"
            android:id="@+id/btn_train"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:layout_alignEnd="@+id/btn_showAll" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/btn_showAll"
            android:id="@+id/btn_showAll"
            android:layout_below="@+id/btn_train"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_vocable"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/btn_add"
            android:layout_below="@+id/btn_showAll"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/btn_showAll" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/btn_edit"
            android:layout_below="@+id/btn_delete"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/btn_delete" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/btn_delete_vocable"
            android:id="@+id/btn_delete"
            android:layout_below="@+id/btn_add"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/btn_add" />
    </RelativeLayout>

</RelativeLayout>
